[project]
name = "storyparkscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "greenlet>=3.1.1",
    "piexif>=1.1.3",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
